force-app/main/default/objects/Volunteer_Hour__c/Volunteer_Hour__c.object-meta.xml
<CustomObject>
    <label>Volunteer Hour</label>
    <nameField>
        <displayFormat>VH-{0000}</displayFormat>
        <label>Hour ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>