force-app/main/default/objects/Volunteer_Hour__c/fields/ApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>ApplicationSource__c</fullName>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>