force-app/main/default/objects/Volunteer_Hour__c/fields/EligibilityChecked__c.field-meta.xml
<CustomField>
    <fullName>EligibilityChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility Checked</label>
    <type>Checkbox</type>
</CustomField>