force-app/main/default/objects/Volunteer_Hour__c/fields/HoursWorked__c.field-meta.xml
<CustomField>
    <fullName>HoursWorked__c</fullName>
    <label>Hours Worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>