force-app/main/default/objects/Volunteer_Hour__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Hours</relationshipLabel>
    <relationshipName>Volunteer_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>