force-app/main/default/objects/Volunteer_Hour__c/fields/Volunteer_Shift__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Shift__c</fullName>
    <label>Volunteer Shift</label>
    <referenceTo>Volunteer_Shift__c</referenceTo>
    <relationshipLabel>Volunteer Hours</relationshipLabel>
    <relationshipName>Volunteer_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>