force-app/main/default/objects/Volunteer_Hour__c/fields/VolunteerComments__c.field-meta.xml
<CustomField>
    <fullName>VolunteerComments__c</fullName>
    <label>Volunteer Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>